--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@
         bottom: 30%;
         left: 20%;
       }
+    .main-right-part{
+        width: 100%;
+    }
     
    
   }
@@ -172,7 +175,7 @@
 
 /* Responsive for tablets and so  */
 
-@media (min-width: 600px) and (max-width: 1024px) {
+@media (min-width: 760px) and (max-width: 1024px) {
   
    
    
@@ -193,17 +196,21 @@
   }
 @media (min-width: 1024px) and (max-width:1350px) {
       
-    .tablet-search {
-        width: 100% !important;
-        max-width: 500px;
-      }
+    
+      .tablet-search {
+        display: none;
+        }
       .tablet-menu {
         gap: 16px !important;
       }
       .tablet-text-sm {
-          font-size: 14px !important;
+          font-size: 16px !important;
           white-space: nowrap;
       }
+      .tablet-search-display{
+        display:block;
+    }
+      
   }
 @media (min-width: 1350px) and (max-width:1450px) {
       
@@ -218,6 +225,7 @@
           font-size: 14px !important;
           white-space: nowrap;
       }
+    
   }
   
 /* Responsive for end tablets and so  */
